--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 </head>
 <body>
   <div class="player-gameboard gameboard"></div>
+  <div class="computer-gameboard gameboard"></div>
 </body>
 </html>
