Add all logic for prep and game phase

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 <body>
   <div class="player-gameboard gameboard"></div>
   <div class="computer-gameboard gameboard"></div>
+  <button id="axis">X</button>
 </body>
 </html>
