Make the game responsive with media queries

--- a/index.html
+++ b/index.html
@@ -9,8 +9,17 @@
   <title>Battleship</title>
 </head>
 <body>
-  <button id="axis">X</button>
-  <div class="player-gameboard gameboard"></div>
-  <div class="computer-gameboard gameboard"></div>
+  <h1>Battleship</h1>
+  <div class="gameboards">
+    <button id="axis">X</button>
+    <div class="board-container">
+      <h2>Player's Board</h2>
+      <div class="player-gameboard gameboard"></div>
+    </div>
+    <div class="board-container">
+      <h2>Computer's Board</h2>
+      <div class="computer-gameboard gameboard"></div>
+    </div>
+  </div>
 </body>
 </html>
