Make the axis vhange button more obvious

--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 </head>
 <body>
   <h1>Battleship</h1>
-  <div class="gameboards">
+  <div class="axis-container">
+    <label for="axis">To change placement axis:</label>
     <button id="axis">X</button>
+  </div>
+  <div class="gameboards">
     <div class="board-container">
       <h2>Player's Board</h2>
       <div class="player-gameboard gameboard"></div>
