--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 <body>
   <h1>Battleship</h1>
   <div class="axis-container">
+    <h3>Place Your Ships!</h3>
     <label for="axis">To change placement axis:</label>
     <button id="axis">X</button>
   </div>
+  <h3 class="play-title" hidden>Hit the Opponent's Ships!</h3>
   <div class="gameboards">
     <div class="board-container">
       <h2>Player's Board</h2>
